content,internal: fix anchor target links for constants and variables
This change adds content to anchor links for package scoped
constants and variables and scroll padding to code blocks to
fix the issue where items selected from jump to identifier or
navigated to directly by page URL would appear off-screen.

Fixes golang/go#38575

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/283955
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -1307,6 +1307,14 @@ pre {
   padding-top: 1.5rem;
   text-align: right;
 }
+.Documentation-declaration pre {
+  scroll-padding-top: calc(var(--header-height) + 3.75rem);
+}
+@media only screen and (min-width: 52rem) {
+  .Documentation-declaration pre {
+    scroll-padding-top: calc(var(--header-height) + 0.75rem);
+  }
+}
 .Documentation-declaration + .Documentation-declaration {
   margin-top: 0.625rem;
 }
